--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-language: objective-c
-osx_image: xcode10
+language: swift
+osx_image: xcode8
 xcode_workspace: DungeonsDragonsCC.xcworkspace
 xcode_scheme: DungeonsDragonsCCTravis
-xcode_sdk: iphonesimulator10
+xcode_sdk: iphonesimulator10.0
 script:
   - xcodebuild test -workspace DungeonsDragonsCC.xcworkspace -scheme DungeonsDragonsCCTravis -destination 'platform=iOS Simulator,name=iPhone 6'
 after_success:
