--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ xcode_sdk: iphonesimulator10.0
 script:
   - xcodebuild test -workspace DungeonsDragonsCC.xcworkspace -scheme DungeonsDragonsCCTravis -destination 'platform=iOS Simulator,name=iPhone 6'
 before_install: 
-  - rvm use system
+  - gem install activesupport -v 4.2.6
   - gem install cocoapods -v '1.0.1' 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
