--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
   - pod repo update --silent
 after_success:
 - bash <(curl -s https://codecov.io/bash)
-"group": "stable",
-"dist": "osx",
+"group": "stable"
+"dist": "osx"
 "os": "osx"
