ignore viewcontrollers and cells for code cov

--- a/codecov.yml
+++ b/codecov.yml
@@ -12,6 +12,8 @@ coverage:
   ignore:
     - "DungeonsDragonsCCTests/.*"
     - "Pods/.*"
+    - "/*ViewController.swift"
+    - "/*Cell.swift"
 
 comment:
   layout: "header, diff"
